# learn_axum

./: Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
src/: main.rs  routes.rs
src/routes/: auth.rs  base.rs  users.rs
src/routes/auth/: index.rs
src/routes/base/: index.rs
src/routes/users/: index.rs
