[package]
name = "learn_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] }
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
serde_json = "1.0.94"
bcrypt = "0.14.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"


